Fixed banner on mobile

--- a/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-world-cup-2022.css
+++ b/kamehouse-ui/src/main/webapp/kamehouse/css/banners/kamehouse-banners-world-cup-2022.css
@@ -111,7 +111,7 @@
   
   @media (max-width : 499px) {
     .banner-holanda-messi-corriendo {
-      background-position-x: -300px;
+      background-position-x: -120px;
     }
   }  
 
